<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Week2Assignment-Mekone</string>

    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_username">Username</string>
    <string name="txt_age">Age</string>
    <string name="txt_dob">DOB</string>



    <string name="edit_name" />
    <string name="edit_email" />
    <string name="edit_username" />
    <string name="edit_age" />
    <string name="edit_dob" />

    <string name="btn_submit">Submit</string>

    <string name="txt_author">Tolrom, Mekone 4/15/2018</string>

    <string name="form_status">_status_</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome: </string>

    <string name="fix_errors">Fix Errors</string>
    <string name="oops_errors">OOPS Errors!</string>

    <string name="str_name">Mekone Tolrom</string>
    <string name="str_age">2/2/1975</string>
    <string name="str_username">mtolrom</string>
    <string name="str_email">mtolrom@outlook.com</string>
    <string name="str_occupation">Engineer</string>
    <string name="str_description">Cloud Computing Engineer</string>

    <string name="r_name">Name : Mekone Tolrom</string>
    <string name="r_age">Age : 43</string>
    <string name="r_age2">43</string>
    <string name="r_username">Username : mtolrom</string>
    <string name="r_email">Email : mtolrom@outlook.com</string>
    <string name="r_occupation">Occupation : Engineer</string>
    <string name="r_description">Description : Cloud Computing Engineer</string>
    <string name="matches_ryan_gosling">Ryan Gosling</string>

    <string name="go_to_location_example">Go To Location Example</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <!--
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    -->
    <string name="network_provider_started_running">Network provider started running</string>
    <string name="network_provider_update">Network Provider update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
</resources>