...
        android:text="Occupation"
        android:textSize="18dp"
        android:padding="15dp"
        android:layout_below="@id/id_age" />

    <EditText
        android:id="@+id/edit_occupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/id_occupation"
...
        android:text="Description"
        android:textSize="18dp"
        android:padding="15dp"
        android:layout_below="@id/id_occupation" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="3"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/id_description"
        android:layout_toEndOf="@+id/id_description"
        android:layout_alignTop="@+id/id_description" />

    <TextView
        android:id="@+id/error_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Message"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:layout_below="@id/id_description" />

    <Button
        android:id="@+id/id_submit"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:onClick="createAccount"
        android:textSize="18dp"
...
